<resources>
    <string name="app_name">CocoShop</string>
    <string name="juan_camilo_tobon">JUAN CAMILO TOBON</string>
    <string name="images">Images</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="recordarme">Recordarme</string>
    <string name="ingresar">Ingresar</string>

    <string name="usuarios">Usuarios</string>
    <string name="empleados">Empleados</string>
    <string name="productos">Productos</string>
    <string name="reporte_ventas">Reporte ventas</string>
    <string name="reporte_bonos">Reporte bonos</string>

    <string name="usuarios_registrados">Usuarios registrados: %1$s</string>
    <string name="productos_registrados">Productos registrados: %1$s</string>
    <string name="buscando">Buscando</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="datos_usuario">Datos usuario</string>
    <string name="datos_ingreso">Datos ingreso</string>
    <string name="guardar">Guardar</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="modificar_usuario">Modificar usuario</string>
    <string name="es_empleado">Es empleado</string>
    <string name="es_cliente">Es cliente</string>
    <string name="activo">Activo</string>
    <string name="inactivo">Inactivo</string>
    <string name="ventas">Ventas</string>
    <string name="crear_documento">Crear documento</string>
    <string name="total">Total</string>
    <string name="abonos">Abonos</string>
    <string name="valor_total">Valor total: %1$s</string>
    <string name="agregar_item">Agregar item</string>
    <string name="ventas_registradas">Ventas registradas: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valor_abono">Valor abono</string>
    <string name="cancelar">Cancelar</string>
    <string name="deslice_la_pantalla_hacia_abajo_para_consultar">Deslice la pantalla hacia abajo para consultar</string>
    <string name="admin">Admin</string>
    <string name="_12345678">12345678</string>
</resources>