<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".views.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/textInputLayout"
        android:layout_marginTop="15dp"
        android:hint="@string/usuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUser"
            style="@style/editTextWhile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:text="@string/admin"
            android:inputType="textPersonName"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/textInputLayout"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPass"
            style="@style/editTextWhile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:text="@string/_12345678"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresar" />
</LinearLayout>