<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".views.UsuarioActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:navigationIcon="@drawable/ic_arrow_white_24"
        android:theme="?attr/actionBarTheme"
        android:titleTextColor="@android:color/white"
        tools:ignore="UnusedAttribute" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos_usuario"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text4"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:hint="@string/nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNombre"
                    style="@style/editTextWhile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:hint="@string/apellido">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtApellido"
                    style="@style/editTextWhile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:hint="@string/direccion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDireccion"
                    style="@style/editTextWhile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:hint="@string/telefono">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTelefono"
                    style="@style/editTextWhile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbEmpleado"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/es_empleado" />

                <RadioButton
                    android:id="@+id/rbUsuario"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/es_cliente" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/datos_ingreso"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text4"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:hint="@string/usuario">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUser"
                    style="@style/editTextWhile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPass"
                    style="@style/editTextWhile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbActivo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/activo" />

                <RadioButton
                    android:id="@+id/rbInactivo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inactivo" />
            </RadioGroup>

            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/guardar" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>